[package]
name = "ip-tools"
version = "0.1.0"
edition = "2021"
description = "IP Tools"
authors = ["Mystic"]
repository = "https://github.com/pplmx/ip-tools"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ip_tools"
path = "src/lib.rs"

[[bin]]
name = "ip-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.1.1", features = ["cargo"] }
local-ip-address = "~0.5.1"

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1
