[package]
name = "ip-tools"
version = "0.1.0"
edition = "2021"
description = "IP Tools"
authors = ["Mystic"]
repository = "https://github.com/pplmx/ip-tools"
license = "MIT OR Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ip_tools"
path = "src/lib.rs"

[[bin]]
name = "ip-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.6.0", features = ["cargo"] }
local-ip-address = "~0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
husky-rs = "0.3"

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
criterion = "0.8"
predicates = "3.1"
