[package]
name = "ip-tools"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "A CLI tool and library to retrieve the local IP address and list network interfaces"
authors = ["Mystic"]
repository = "https://github.com/pplmx/ip-tools"
homepage = "https://github.com/pplmx/ip-tools"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ip", "network", "interface", "ip-address", "cli"]
categories = ["command-line-utilities", "network-programming"]
build = "build.rs"

[lib]
name = "ip_tools"
path = "src/lib.rs"

[[bin]]
name = "ip-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.6.0", features = ["cargo"] }
local-ip-address = "~0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
husky-rs = "0.3"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.8"
predicates = "3.1"

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
